# returns-demo

./: Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
pipeline/: __main__.py  run.py  templates.py
pipeline/app_config/: __init__.py
pipeline/config/: __init__.py
pipeline/config_templates/: templates.py
pipeline/netbox_service/: mock_data.py  service.py
pipeline/vni_service/: db.py  service.py
