[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = "returns demo"
authors = ["Daniel <djustice@wificidr.net>"]

[tool.poetry.dependencies]
python = "^3.9"
returns = "^0.16.0"
httpx = "^0.18.2"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
isort = "^5.9.2"
pylama = "^7.7.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
